# 231231244123HoffmanGamma

./: README.md
MCPE-SourceCode/: CONVERSION_SUMMARY.md  README.md
MCPE-SourceCode/.github/workflows/: ci.yml
MCPE-SourceCode/rust-port/: Cargo.toml
MCPE-SourceCode/rust-port/src/: aabb.rs  ai.rs  app.rs  app_platform.rs  biome.rs  chunk_codec.rs  chunk_pos.rs  data_io.rs  data_layer.rs  direction.rs  empty_level_chunk.rs  entity.rs  entity_core.rs  entity_factory.rs  entity_pos.rs  facing.rs  feature.rs  folder_methods.rs  font.rs  food_data.rs  game_mode.rs  gui.rs  hit_result.rs  inventory.rs  item.rs  item_instance.rs  level.rs  level_chunk.rs  level_data.rs  level_storage_source.rs  lib.rs  light_layer.rs  local_player.rs  main.rs  material.rs  memory_storage.rs  mesh.rs  minecraft.rs  mob.rs  mob_category.rs  (+33 more)
MCPE-SourceCode/rust-port/tests/: playthrough.rs
MCPE-SourceCode/scripts/: package.ps1  package.sh
