[package]
name = "rust-port"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add basic dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# For math
nalgebra = "0.32"
# For random
rand = "0.8"
# For graphics
winit = "0.26"
glow = "0.13"
glutin = "0.28"
image = "0.24"
# For lazy static
lazy_static = "1.4"

[[bin]]
name = "rustcraft"
path = "src/main.rs"
